FIXED: Fix an issue where the theme-grid option would be incompatible with fullwidth alignment in the container block
git-svn-id: https://cssigniter.svn.beanstalkapp.com/cssigniter/plugins/gutenbee/trunk@30422 4294cb29-2c39-44b5-8b85-408dc27d7d38

--- a/src/blocks/container/_editor.scss
+++ b/src/blocks/container/_editor.scss
@@ -158,14 +158,18 @@
       display: none !important;
     }
 
-    > .wp-block-gutenbee-container {
-      > .wp-block-gutenbee-container-inner {
-        max-width: 1110px;
-        margin-left: auto;
-        margin-right: auto;
-        padding-left: $block-padding;
-        padding-right: $block-padding;
-      }
+    > .wp-block-gutenbee-container  > .wp-block-gutenbee-container-inner {
+      max-width: 1110px;
+      margin-left: auto;
+      margin-right: auto;
+      padding-left: $block-padding;
+      padding-right: $block-padding;
+    }
+
+    > .wp-block > .wp-block-gutenbee-container  > .wp-block-gutenbee-container-inner {
+      max-width: 1110px;
+      margin-left: auto;
+      margin-right: auto
     }
 
     > .editor-block-list__block-edit {
